@@ -575,3 +575,4 @@ FIXED: The right edge of pressed drop buttons was black if a big pillar was next
 FIXED: Guards appeared in the current room when they fell into spikes in an adjacent room. (Example: original level 11, room 22.)
 FIXED: Show an error message if a data file is missing.
 FIXED: "Remember guard hp" for non-standard guards.
+FIXED: Colored torches were not restored on quickload if you (quit and) restarted the game after quicksave.
